objects/Zoho_Ticket__c.object
<CustomObject>
    <description>Contains the zoho ticket data.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ageing__c</fullName>
        <formula>IF((TODAY() -   Created_Time_D_Format__c ) &lt;= 7, 1,
IF(AND((TODAY() -  Created_Time_D_Format__c )&gt;7,(TODAY() -  Created_Time_D_Format__c)&lt;=15), 2,  IF(AND((TODAY() -  Created_Time_D_Format__c )&gt;15,(TODAY() -  Created_Time_D_Format__c )&lt;=30), 3,  IF(AND((TODAY() -  Created_Time_D_Format__c )&gt;30,(TODAY() -  Created_Time_D_Format__c )&lt;=45), 4,  IF((TODAY() -  Created_Time_D_Format__c )&gt;45, 5, 0) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ageing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Email__c</fullName>
        <label>Assignee Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Id__c</fullName>
        <label>Assignee Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Name__c</fullName>
        <label>Assignee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Time_D_Fomat__c</fullName>
        <label>Closed Time(D Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Time_D_Format__c</fullName>
        <label>Created Time(D Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Response_D_Format__c</fullName>
        <label>Customer Response(D Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Month__c</fullName>
        <formula>CASE(MONTH( Customer_Response_D_Format__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year( Customer_Response_D_Format__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Response Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Time__c</fullName>
        <label>Customer Response Time</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_To_Close__c</fullName>
        <formula>Closed_Time_D_Fomat__c  - Created_Time_D_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_D_Format__c</fullName>
        <label>Due Date(D Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EscalationType__c</fullName>
        <label>EscalationType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Month__c</fullName>
        <formula>CASE(MONTH( lmt__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year(lmt__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <label>Last Modified Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time_in_Days__c</fullName>
        <formula>Closed_Time_D_Fomat__c -  Created_Time_D_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Time in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Due_Date_D_Format__c</fullName>
        <label>Response Due Date(D Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Due_Month__c</fullName>
        <formula>CASE(MONTH( Response_Due_Date_D_Format__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year(  Response_Due_Date_D_Format__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Due Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Closed_Month__c</fullName>
        <formula>CASE(MONTH(  Closed_Time_D_Fomat__c  ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year(Closed_Time_D_Fomat__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Closed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Closed_Time__c</fullName>
        <label>Ticket Closed Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Created_Month__c</fullName>
        <formula>CASE(MONTH( Created_Time_D_Format__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year( Created_Time_D_Format__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Due_Month__c</fullName>
        <formula>CASE(MONTH(  Due_Date_D_Format__c  ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) + &apos; &apos; + Text(Year(Due_Date_D_Format__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Due Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ticket ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ticket_Resolved_Date__c</fullName>
        <label>Ticket Resolved Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmt__c</fullName>
        <label>Last Modified Time(D Format)</label>
        <type>Date</type>
    </fields>
    <label>Zoho Ticket</label>
    <nameField>
        <label>Zoho Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>